--- a/build
+++ b/build
@@ -2,6 +2,7 @@
 # version="0.1"
 #
 # ARG_OPTIONAL_SINGLE([image-name],[],[name of the docker image to be pushed],[koehn/diaspora])
+# ARG_OPTIONAL_SINGLE([scanner-token],[],[MicroScanner token to use when checking the image for security vulnerabilities])
 # ARG_OPTIONAL_SINGLE([git-url],[],[git URL from which to clone the code])
 # ARG_OPTIONAL_SINGLE([diaspora-version],[],[version of the diaspora code to compile])
 # ARG_OPTIONAL_SINGLE([ruby-version],[],[version of ruby to use])
@@ -36,6 +37,7 @@ begins_with_short_option()
 
 # THE DEFAULTS INITIALIZATION - OPTIONALS
 _arg_image_name="koehn/diaspora"
+_arg_scanner_token=
 _arg_git_url=
 _arg_diaspora_version=
 _arg_ruby_version=
@@ -45,8 +47,9 @@ _arg_build_options=
 print_help ()
 {
 	printf '%s\n' "Builds a Docker image of a Diaspora repository and pushes that image to Docker."
-	printf 'Usage: %s [--image-name <arg>] [--git-url <arg>] [--diaspora-version <arg>] [--ruby-version <arg>] [--gem-version <arg>] [--build-options <arg>] [-h|--help]\n' "$0"
+	printf 'Usage: %s [--image-name <arg>] [--scanner-token <arg>] [--git-url <arg>] [--diaspora-version <arg>] [--ruby-version <arg>] [--gem-version <arg>] [--build-options <arg>] [-h|--help]\n' "$0"
 	printf '\t%s\n' "--image-name: name of the docker image to be pushed (default: 'koehn/diaspora')"
+	printf '\t%s\n' "--scanner-token: MicroScanner token to use when checking the image for security vulnerabilities (no default)"
 	printf '\t%s\n' "--git-url: git URL from which to clone the code (no default)"
 	printf '\t%s\n' "--diaspora-version: version of the diaspora code to compile (no default)"
 	printf '\t%s\n' "--ruby-version: version of ruby to use (no default)"
@@ -68,6 +71,14 @@ parse_commandline ()
 				;;
 			--image-name=*)
 				_arg_image_name="${_key##--image-name=}"
+				;;
+			--scanner-token)
+				test $# -lt 2 && die "Missing value for the optional argument '$_key'." 1
+				_arg_scanner_token="$2"
+				shift
+				;;
+			--scanner-token=*)
+				_arg_scanner_token="${_key##--scanner-token=}"
 				;;
 			--git-url)
 				test $# -lt 2 && die "Missing value for the optional argument '$_key'." 1
@@ -142,6 +153,7 @@ if [[  $_arg_git_url ]] ; then BUILD_ARGS="$BUILD_ARGS --build-arg GIT_URL=$_arg
 if [[  $_arg_diaspora_version ]] ; then DOCKER_TAG=$_arg_diaspora_version ; BUILD_ARGS="$BUILD_ARGS --build-arg GIT_BRANCH=v$_arg_diaspora_version" ; fi
 if [[  $_arg_ruby_version ]] ; then BUILD_ARGS="$BUILD_ARGS --build-arg RUBY_VERSION=$_arg_ruby_version" ; fi
 if [[  $_arg_gem_version ]] ; then BUILD_ARGS="$BUILD_ARGS --build-arg GEM_VERSION=$_arg_gem_version" ; fi
+if [[  $_arg_scanner_token ]] ; then BUILD_ARGS="$BUILD_ARGS --build-arg SCANNER_TOKEN=$_arg_scanner_token" ; fi
 
 BUILD_ARGS="$BUILD_ARGS --build-arg DIASPORA_DOCKER_GIT_COMMIT=`git log -1 --format=%h` "
 
