--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ build:
     entrypoint: [""]
   script:
   - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
+  - echo "ls -la $CI_PROJECT_DIR"
+  - ls -la $CI_PROJECT_DIR
   - $CI_PROJECT_DIR/build --diaspora-version $CI_COMMIT_TAG
   only: 
   - tags
@@ -16,6 +18,8 @@ build_latest:
     entrypoint: [""]
   script:
   - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
+  - echo "ls -la $CI_PROJECT_DIR"
+  - ls -la $CI_PROJECT_DIR
   - $CI_PROJECT_DIR/build
   only: 
   - tags
