--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,7 @@ build:
     entrypoint: [""]
   script:
   - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-  - echo "ls -la $CI_PROJECT_DIR"
-  - ls -la $CI_PROJECT_DIR
-  - $CI_PROJECT_DIR/build --diaspora-version $CI_COMMIT_TAG
+  - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/docker:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$CI_COMMIT_TAG 
   only: 
   - tags
 
@@ -18,9 +16,7 @@ build_latest:
     entrypoint: [""]
   script:
   - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-  - echo "ls -la $CI_PROJECT_DIR"
-  - ls -la $CI_PROJECT_DIR
-  - $CI_PROJECT_DIR/build
+  - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/docker:latest
   only: 
   - tags
 
