--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ build:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
-  - echo "{\"auths\":{\"index.docker.io\":{\"username\":\"$DOCKER_LOGIN\",\"password\":\"$DOCKER_PASSWORD\"}}}" > /kaniko/.docker/config.json
+  - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$DOCKER_LOGIN\",\"password\":\"$DOCKER_PASSWORD\", \"auth\":\"$DOCKER_AUTH\"}}}" > /kaniko/.docker/config.json
   - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$CI_COMMIT_TAG --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
