fixing docker auth

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,11 @@ build:
     {
       "auths": {
         "https://index.docker.io/v1/": {
-          "auth":"$DOCKER_AUTH"
+          "auth":"${DOCKER_AUTH}"
+        },
+        "${CI_REGISTRY}": {
+          "username": "${CI_REGISTRY_USER}",
+          "password": "${CI_REGISTRY_PASSWORD}"
         }
       }
     }
