--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ build:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
-  #- echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$DOCKER_LOGIN\",\"password\":\"$DOCKER_PASSWORD\", \"auth\":\"$DOCKER_AUTH\"}}}" > /kaniko/.docker/config.json
   - |
     cat > /kaniko/.docker/config.json <<EOF
     {
@@ -19,7 +18,6 @@ build:
       }
     }
     EOF
-  - cat /kaniko/.docker/config.json
   - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$CI_COMMIT_TAG --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
@@ -30,7 +28,20 @@ build_latest:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
-  - echo "{\"auths\":{\"index.docker.io\":{\"username\":\"$DOCKER_LOGIN\",\"password\":\"$DOCKER_PASSWORD\"}}}" > /kaniko/.docker/config.json
+  - |
+    cat > /kaniko/.docker/config.json <<EOF
+    {
+      "auths": {
+        "https://index.docker.io/v1/": {
+          "auth":"${DOCKER_AUTH}"
+        },
+        "${CI_REGISTRY}": {
+          "username": "${CI_REGISTRY_USER}",
+          "password": "${CI_REGISTRY_PASSWORD}"
+        }
+      }
+    }
+    EOF
   - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/docker:latest --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
