--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 build:
   stage: build
   image:
-    name: gcr.io/kaniko-project/executor:debug-v0.17.1
+    name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
   - |
@@ -18,6 +18,7 @@ build:
       }
     }
     EOF
+  - cat /kaniko/.docker/config.json
   - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$(echo $CI_COMMIT_TAG | awk -F '-' '{print $1}') --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
@@ -25,7 +26,7 @@ build:
 build_latest:
   stage: build
   image:
-    name: gcr.io/kaniko-project/executor:debug-v0.17.1
+    name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
   - |
@@ -42,6 +43,7 @@ build_latest:
       }
     }
     EOF
+  - cat /kaniko/.docker/config.json
   - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:latest --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
