--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
       }
     }
     EOF
-  - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$(echo $CI_COMMIT_TAG | awk -F '-' '{print $1}') --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
+  - /kaniko/executor --additional-whitelist=/var/run --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:$CI_COMMIT_TAG --build-arg GIT_BRANCH=$(echo $CI_COMMIT_TAG | awk -F '-' '{print $1}') --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
 
@@ -42,7 +42,7 @@ build_latest:
       }
     }
     EOF
-  - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:latest --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
+  - /kaniko/executor --additional-whitelist=/var/run --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination koehn/diaspora:latest --build-arg SCANNER_TOKEN=$SCANNER_TOKEN
   only: 
   - tags
 
