--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,3 +62,5 @@ deploy:
   - cat $SSH_PUBLIC_KEY > /root/.ssh/id_rsa.pub
   - chmod 600 /root/.ssh/known_hosts /root/.ssh/id_rsa /root/.ssh/id_rsa.pub
   - ssh root@turnkey.koehn.com "cd /home/docker/docker-services/web/sites/diaspora && docker-compose pull & docker-compose up -d"
+  only:
+  - tags
