--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy:
   - mkdir -p /root/.ssh
   - chmod 700 /root/.ssh
   - cat $TURNKEY_FP > /root/.ssh/known_hosts
-  - cat $SSH_PRIVATE_KEY > /root/.ssh/id_rsa
+  - tr '>' '\n' < $SSH_PRIVATE_KEY > /root/.ssh/id_rsa
   - cat $SSH_PUBLIC_KEY > /root/.ssh/id_rsa.pub
   - chmod 600 /root/.ssh/known_hosts /root/.ssh/id_rsa /root/.ssh/id_rsa.pub
   - ssh root@turnkey.koehn.com "cd /home/docker/docker-services/web/sites/diaspora && docker-compose pull & docker-compose up -d"
