--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -6,11 +6,20 @@ services:
       - postgres
       - redis
     volumes:
-      - diaspora-images:/home/diaspora/diaspora/public/uploads/images
+      - diaspora-public:/home/diaspora/diaspora/public/
       - ./diaspora.yml:/home/diaspora/diaspora/config/diaspora.yml:ro
       - ./database.yml:/home/diaspora/diaspora/config/database.yml:ro
+    restart: always
+
+  nginx:
+    image: nginx:stable-alpine
+    links:
+      - diaspora
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - diaspora-public:/home/diaspora/diaspora/public/
     ports:
-      - '3000:3000'
+      - '8080:80'
     restart: always
 
   postgres:
@@ -40,7 +49,7 @@ services:
     restart: always
 
 volumes:
-  diaspora-images:
+  diaspora-public:
   postgres:
   postgres-run:
   redis:
